--- a/ArcGISWinForm/MapViewCommand/MapViewCommand.csproj
+++ b/ArcGISWinForm/MapViewCommand/MapViewCommand.csproj
@@ -35,7 +35,28 @@
     <Reference Include="DevExpress.Utils.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraBars.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="ESRI.ArcGIS.ADF.Local, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL" />
+    <Reference Include="ESRI.ArcGIS.AxControls, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL" />
+    <Reference Include="ESRI.ArcGIS.Carto, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
     <Reference Include="ESRI.ArcGIS.Controls, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="ESRI.ArcGIS.Display, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="ESRI.ArcGIS.Geodatabase, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="ESRI.ArcGIS.Geometry, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="ESRI.ArcGIS.System, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="ESRI.ArcGIS.SystemUI, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
@@ -53,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command\ClearSelectionCommand.cs" />
+    <Compile Include="Tool\MapCustomIdentifyTool.cs" />
     <Compile Include="Tool\MapIdentifyTool.cs" />
     <Compile Include="Tool\MapPanTool.cs" />
     <Compile Include="Command\MapFullExtentCommand.cs" />
@@ -62,8 +84,22 @@
     <Compile Include="Command\ZoomToLastExtentForwardCommand.cs" />
     <Compile Include="Command\ZoomToLastExtentBackCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UIForm\CustomIdentifyToolDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UIForm\CustomIdentifyToolDialog.designer.cs">
+      <DependentUpon>CustomIdentifyToolDialog.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AEUtilities\AEUtilities.csproj">
+      <Project>{91D957AB-2128-4618-907F-78661244C507}</Project>
+      <Name>AEUtilities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DotNetUtilities\DotNetUtilities.csproj">
+      <Project>{88191AA4-E33E-4505-A6E2-CC470B6D8CD2}</Project>
+      <Name>DotNetUtilities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Framework\Framework.csproj">
       <Project>{D4C6E4FE-EED6-4AFD-9889-056A5AF676ED}</Project>
       <Name>Framework</Name>
@@ -73,8 +109,11 @@
       <Name>Share</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="UIForm\" />
+    <EmbeddedResource Include="UIForm\CustomIdentifyToolDialog.resx">
+      <DependentUpon>CustomIdentifyToolDialog.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
